--- a/UI/AppView.resx
+++ b/UI/AppView.resx
@@ -108,13 +108,85 @@
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
   </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
+    <resheader name="version">
+        <value>2.0</value>
+    </resheader>
+    <resheader name="reader">
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral,
+            PublicKeyToken=b77a5c561934e089
+        </value>
+    </resheader>
+    <resheader name="writer">
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral,
+            PublicKeyToken=b77a5c561934e089
+        </value>
+    </resheader>
+    <metadata name="drawerIconList.TrayLocation"
+              type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+        <value>17, 17</value>
+    </metadata>
+    <data name="drawerIconList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>
+            AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+            LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+            ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA6
+            DQAAAk1TRnQBSQFMAgEBBwEAARgBAAEYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+            AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+            AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+            AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+            AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+            AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+            AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+            ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+            AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+            AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+            AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+            AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+            AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+            AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+            AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+            AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+            ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+            Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+            AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+            AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+            AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+            ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+            Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+            AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+            AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+            AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+            AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+            AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+            AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/1cAAfMC7QG8MQAB/wHv
+            AfIIAAHsAgABbQgAAZIBDgkAAW0dAAHvAQAB7wUAAQcB8wH0ARACAAEPAfMB9AHtAfQFAAHvJQAB/wHv
+            AQ8B7wH/BAAB8QIAAQ4FAAEOAQABkgUAAe8BAATvAfIaAAHzAW0BAAHqAfMBBwEAAe8FAAH/BQABkgEH
+            AUMDAAEOAf8EAAHvBQAB7xkAAfcBAAH4Ae8B+AEAARMBBwH/BQAB/wHvAQ8BAAEQAfMCAAH0ARACAAHs
+            Af8EAAHvHgAB8wEAAfIDAAHyAQAB8wgAAe0BAAHrBAAB9wIAAf8FAAHvBwAB7xYAAeoB+AUAAfgB6gcA
+            Af8BbQEAARIDAAH/AesCAAHyBQAB7wEABu8B8hYAAQ4B7wUAAe8BDgYAAf8BDgMAAe8B/wEAAfEDAAEO
+            Af8EAAHvHgAB6gH4BQAB+AHqBgAB/wFtBAABFAHqAQ4DAAETAf8jAAHzAQAB8gMAAfIBAAHzBwAB/wEP
+            AQABQwUAAUMBAAG8BQAB7x8AAfcBAAH4Ae8B+AEAAfcJAAH0Av8B6gIAARQC/wHyAf8EAAEPAW0J7wEO
+            FgAB8wFtAQABbQHzDQAB7wIAAesIAAHyAQ8JAAGSKAAB/wLyAfQLAAHvnwAB9AHsAREBDgFtAfEB/wUA
+            Af8FAAH/AfIGAAH/IwAB9AHsAQ4BAAEOAQ8CAAESAfIB/wMAAQ8BbQGSAe8B9wH4ARABQwETAe0B7wH3
+            AewBFQHvBQAB8wHsARUCDgESAe8B/wYACu8B8gUAAeoBAAEVAfEB/wEAAfQBbQIAAfILAAHwAW0BDgEQ
+            AesBAAHvBAAB9AEOARAB8AH/AfQBBwEOAQ8B9A8AAe8DAAH/AZIBAAHrAf8FAAEHAQABEgH/CgAB9AH/
+            BAAB7wUAAfEB/wQAAfQBFAHrBQABEgkAAfEDAAH0AgAB9AYAAf8CAAHxCgAB7wHsAf8DAAHvAwAB7wYA
+            AfQC/wEOAfIEAAH/AW0GAAFDAfMEAAHwAgABEQEHAfQB/wEAAf8B8QHrAgABbQoAAe8BAAHsAf8CAAHv
+            AQAB9AFtAQABbQH0AgAB9AGSAW0B8wEAAewB6wYAAfQB8AEHAe8BvAHzAf8FAAEHBQACDgUAAQ4KAAHv
+            AgABFQIAAe8BAAFtAwABbQMAAQcDAAHvAQ4SAAEHBQAB7AH3ARUEAAERCgAB7wUAAe8DAAEOAfQEAAHy
+            AwAB9wERBgAB/wHvAUMBDgHsAf8GAAHxBAABBwIAAfMEAAHsCgAB7wUAAe8DAAESAQcEAAHyAwABbQGS
+            BgAB8QQAAewGAAH/ARADAAH/AgAB/wMAAQ4B9AoAAe8FAAHvAwAB7wEOAfQCAAHvAfQBAAH/AfABEAH0
+            BgABBwQAAREHAAHxAwABBwIAAfMDAAHsCwAB7wUAAe8DAAH/ARABFAH/BAAB8AEAAe8HAAHxBAAB7AgA
+            Ae8DAAHsAfcBFQIAAW0B9AMAAfIB9wH4AW0B7AH3AfIBAAH0AW0DAAG8Af8EAAH0AesBDgHsAe8B9wFt
+            ARAB7wH/BwAB/wHvAUMBDgHsAf8JAAHxARAFAAGSDwABbQoAAfIBbQEOAREB7QH0GQAB/wHxAgcB8AH0
+            Af8PAAH0AW1jAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/AQAG/wIAAv8B/AE/
+            Av8CAAH/AeMB/AE/AcABAwIAAf8B4wHgAQMBzwH7AgAB/wGDAcABAwHIATsCAAHwAQ8BgAEBAcgBOwIA
+            AeABDwKBAc8B+wIAAccBHwHjAcMByAELAgABzwGfAcMBgwHIAQsCAAHPAZ8BgAGBAc8B+wIAAc8BnwGA
+            AQEBwAEDAgABxwEfAcABAwHPAfsCAAHgAT8B4AEDAcABAwIAAfABfwH8AT8BwAEDAgAC/wH8AT8B8wHv
+            AgAG/wIACP8B+AEPAb4BfgT/AeABAwGAAQAB+AEHAeABAwHgAYMCgAHwAQMB4AEDAYMB4QGAAZwB+QHj
+            AeABAwGHAeEBgAGMAe8BwQHgAQcBgAGBAYABhAGDAQkB+AEPAYABAQGAAYQBgwE5Av8BgAEBAYABhAHn
+            ATkB+AEfAoEBgAGEAecBOQH4AR8CgQGAAYQB4wEhAfgBHwHBAYMBgAGEAeEB4wH4AR8B4AEDAYABhAHw
+            AQMB+AEfAfABDwH/AecB/AEPAv8B+AEPAf8B5wz/Cw==
+        </value>
+    </data>
 </root>
