--- a/LibraryApplication/UI/Component/Combobox/BaseComboboxControl.resx
+++ b/LibraryApplication/UI/Component/Combobox/BaseComboboxControl.resx
@@ -62,4 +62,23 @@
             PublicKeyToken=b77a5c561934e089
         </value>
     </resheader>
+    <assembly alias="System.Drawing.Common"
+              name="System.Drawing.Common, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51"/>
+    <data name="menuItemNew.Image" type="System.Drawing.Bitmap, System.Drawing.Common"
+          mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>
+            iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAADZJREFUSEtj
+            GAWjAB38h2KagVELCIKhYwHMIFIx0QCbZmIwxYBqBuECoxYQBEPfglEw5AADAwBMuzPNkyXtlAAAAABJ
+            RU5ErkJggg==
+        </value>
+    </data>
+    <data name="menuItemEdit.Image" type="System.Drawing.Bitmap, System.Drawing.Common"
+          mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>
+            iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAIdJREFUSEvt
+            kcEJgDAQBM/qLEOrEIQ04NsObcKX6K7mJAT9xIuvGxhMIuzGU5w/aOECp3NnDMNXuEdnaMoINVw1+RLe
+            vLuWEmBawHF9QseywZ4HQEt4zvfF5DNPSzgus3D+zCGu05Ji8vAmPrk3HYuH33j4K1XDCcNolXCiBapp
+            OKka7jwgcgDHsFrVOXhGVQAAAABJRU5ErkJggg==
+        </value>
+    </data>
 </root>
