feat: book item manage dialog

--- a/LibraryApplication/UI/View/Book/BookItemManageDialog.resx
+++ b/LibraryApplication/UI/View/Book/BookItemManageDialog.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-    <!-- 
-      Microsoft ResX Schema 
-      
-      Version 2.0
-      
-      The primary goals of this format is to allow a simple XML format 
-      that is mostly human readable. The generation and parsing of the 
-      various data types are done through the TypeConverter classes 
-      associated with the data types.
-      
-      Example:
-      
-      ... ado.net/XML headers & schema ...
-      <resheader name="resmimetype">text/microsoft-resx</resheader>
-      <resheader name="version">2.0</resheader>
-      <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-      <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-      <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-      <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-      <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-          <value>[base64 mime encoded serialized .NET Framework object]</value>
-      </data>
-      <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-          <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-          <comment>This is a comment</comment>
-      </data>
-                  
-      There are any number of "resheader" rows that contain simple 
-      name/value pairs.
-      
-      Each data row contains a name, and value. The row also contains a 
-      type or mimetype. Type corresponds to a .NET class that support 
-      text/value conversion through the TypeConverter architecture. 
-      Classes that don't support this are serialized and stored with the 
-      mimetype set.
-      
-      The mimetype is used for serialized objects, and tells the 
-      ResXResourceReader how to depersist the object. This is currently not 
-      extensible. For a given mimetype the value must be set accordingly:
-      
-      Note - application/x-microsoft.net.object.binary.base64 is the format 
-      that the ResXResourceWriter will generate, however the reader can 
-      read any of the formats listed below.
-      
-      mimetype: application/x-microsoft.net.object.binary.base64
-      value   : The object must be serialized with 
-              : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-              : and then encoded with base64 encoding.
-      
-      mimetype: application/x-microsoft.net.object.soap.base64
-      value   : The object must be serialized with 
-              : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-              : and then encoded with base64 encoding.
-  
-      mimetype: application/x-microsoft.net.object.bytearray.base64
-      value   : The object must be serialized into a byte array 
-              : using a System.ComponentModel.TypeConverter
-              : and then encoded with base64 encoding.
-      -->
+﻿<root>
     <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
                 xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
         <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
@@ -122,4 +62,34 @@
             PublicKeyToken=b77a5c561934e089
         </value>
     </resheader>
+    <assembly alias="System.Drawing.Common"
+              name="System.Drawing.Common, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51"/>
+    <data name="btnClear.Icon" type="System.Drawing.Bitmap, System.Drawing.Common"
+          mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>
+            iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAARdJREFUSEvt
+            lD1OAlEURqdRG6lcBdBYGMCCtbECNKChw43oKiB2lpYmFiQk/sTH+ZgvhDC8mUeEhIKTnDDc+907MAyT
+            nTh+QghNvMdXnFkd32HDsSW87/mwGsJn+Ii/GEO9ISrbU8Hj5XjgRQPwhVrSwUt7iyP8RvHm1+QTaKF4
+            x2uXC9BroS7ZCrfikGmgvro+eXS5oL+8LOu4FYdMP4+GoUtboV9YLtyOQ2aSR0PbpQL0ti4XjsQh85lH
+            Q82l/cLig5+g8hL9CxYn/cjrkB3nI6HvUhxCybepIHPjvKy7XA7B1D+aln8oCAOXqyFc9qi4wi4+4Q+K
+            Zzz3eBoMpDzs/vABLzy2OwxvPq7nOEUtbjp24mjJsgUV5wMtbwSkEQAAAABJRU5ErkJggg==
+        </value>
+    </data>
+    <data name="btnDelete.Icon" type="System.Drawing.Bitmap, System.Drawing.Common"
+          mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>
+            iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAGlJREFUSEvt
+            zsENgCAMRuGOwjjsv4AJDlKLvJMJ0OrFQ7+Ei/lfqqTPVLXYO+w99W+FWczo48j32IeR/wQ/5UbmR+dG
+            5ke3DZnlgTlmeWCOWR6YY/bqQBupSyPzs6jaO+98rW8qWYoSuQDYm+pCb8zzZAAAAABJRU5ErkJggg==
+        </value>
+    </data>
+    <data name="btnSave.Icon" type="System.Drawing.Bitmap, System.Drawing.Common"
+          mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>
+            iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAIRJREFUSEvt
+            kLENgDAMBFMwDOukYhzmYUWa8G87UlAqjGmQT3opsuNzlJIkj2itrXaMB/KKnMhupTgGOYldAGHKZyD0
+            yXF5QQ6kWmmCPcT3cgxsOieCaQlr1iO+b+Ggzt+X8Gw18u7PKVCPLrHEyDsUqU/EsfIOheoVYuUdij+T
+            J3+glAu5v/VWErc4IgAAAABJRU5ErkJggg==
+        </value>
+    </data>
 </root>
