--- a/LibraryApplication/UI/View/Reader/TicketManageView.resx
+++ b/LibraryApplication/UI/View/Reader/TicketManageView.resx
@@ -1,103 +1,97 @@
 ﻿<root>
-    <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
-                xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-        <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
-        <xsd:element name="root" msdata:IsDataSet="true">
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
             <xsd:complexType>
-                <xsd:choice maxOccurs="unbounded">
-                    <xsd:element name="metadata">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0"/>
-                            </xsd:sequence>
-                            <xsd:attribute name="name" use="required" type="xsd:string"/>
-                            <xsd:attribute name="type" type="xsd:string"/>
-                            <xsd:attribute name="mimetype" type="xsd:string"/>
-                            <xsd:attribute ref="xml:space"/>
-                        </xsd:complexType>
-                    </xsd:element>
-                    <xsd:element name="assembly">
-                        <xsd:complexType>
-                            <xsd:attribute name="alias" type="xsd:string"/>
-                            <xsd:attribute name="name" type="xsd:string"/>
-                        </xsd:complexType>
-                    </xsd:element>
-                    <xsd:element name="data">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
-                                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2"/>
-                            </xsd:sequence>
-                            <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1"/>
-                            <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3"/>
-                            <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4"/>
-                            <xsd:attribute ref="xml:space"/>
-                        </xsd:complexType>
-                    </xsd:element>
-                    <xsd:element name="resheader">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
-                            </xsd:sequence>
-                            <xsd:attribute name="name" type="xsd:string" use="required"/>
-                        </xsd:complexType>
-                    </xsd:element>
-                </xsd:choice>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
-        </xsd:element>
-    </xsd:schema>
-    <resheader name="resmimetype">
-        <value>text/microsoft-resx</value>
-    </resheader>
-    <resheader name="version">
-        <value>2.0</value>
-    </resheader>
-    <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral,
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral,
             PublicKeyToken=b77a5c561934e089
         </value>
-    </resheader>
-    <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral,
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral,
             PublicKeyToken=b77a5c561934e089
         </value>
-    </resheader>
-    <assembly alias="System.Drawing.Common"
-              name="System.Drawing.Common, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51"/>
-    <data name="btnReturn.Icon" type="System.Drawing.Bitmap, System.Drawing.Common"
-          mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>
-            iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-            YQUAAACySURBVEhL7ZVBCsIwEEWz6OEUb+BlXLe31C5E9A72f8hAGiYzmhjqog8eDenMfNpCGv6FAU7w
-            GeWaez9jhG/4inLNva85wjvkAM1zVLtHZ3iARa5QaxTTJyh5g0WkqBa3f/OAS7yWaArgcLMZVAfIcLMZ
-            uDVaQTpcM0XbW5EXeMNpira3Ii/oHkC6viKh60cWJMSiKYAwxKI5wGP7AB61UlSreVyf4ANqjZ/o/nB2
-            MkJYAM35qwqW4/hAAAAAAElFTkSuQmCC
-        </value>
-    </data>
-    <data name="btnBorrow.Icon" type="System.Drawing.Bitmap, System.Drawing.Common"
-          mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>
-            iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAHxJREFUSEvt
-            lUEOgCAMBPs8//8EfYgCcS+lZQVT4eAkc2jYsjeQmZy3jKe5ipCCLXkksdRr3s13uOxJa7HHfIcLQqPQ
-            /c8K3upihUd0oQHCegWYmUDPFd4CE+i5ggYI6xVgtrRonRV0ALOlReusQAOE+QXhz3X4h/OjELkAfDvB
-            ey/suxoAAAAASUVORK5CYII=
-        </value>
-    </data>
-    <data name="btnDelete.Icon" type="System.Drawing.Bitmap, System.Drawing.Common"
-          mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>
-            iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAGlJREFUSEvt
-            zsENgCAMRuGOwjjsv4AJDlKLvJMJ0OrFQ7+Ei/lfqqTPVLXYO+w99W+FWczo48j32IeR/wQ/5UbmR+dG
-            5ke3DZnlgTlmeWCOWR6YY/bqQBupSyPzs6jaO+98rW8qWYoSuQDYm+pCb8zzZAAAAABJRU5ErkJggg==
-        </value>
-    </data>
-    <data name="btnSave.Icon" type="System.Drawing.Bitmap, System.Drawing.Common"
-          mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>
-            iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAIRJREFUSEvt
-            kLENgDAMBFMwDOukYhzmYUWa8G87UlAqjGmQT3opsuNzlJIkj2itrXaMB/KKnMhupTgGOYldAGHKZyD0
-            yXF5QQ6kWmmCPcT3cgxsOieCaQlr1iO+b+Ggzt+X8Gw18u7PKVCPLrHEyDsUqU/EsfIOheoVYuUdij+T
-            J3+glAu5v/VWErc4IgAAAABJRU5ErkJggg==
-        </value>
-    </data>
+  </resheader>
+  <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="btnReturn.Icon" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAALJJREFUSEvt
+        lUEKwjAQRbPo4RRv4GVct7fULkT0DvZ/yEAaJjOaGOqiDx4N6cx82kIa/oUBTvAZ5Zp7P2OEb/iKcs29
+        rznCO+QAzXNUu0dneIBFrlBrFNMnKHmDRaSoFrd/84BLvJZoCuBwsxlUB8hwsxm4NVpBOlwzRdtbkRd4
+        w2mKtrciL+geQLq+IqHrRxYkxKIpgDDEojnAY/sAHrVSVKt5XJ/gA2qNn+j+cHYyQlgAzfmrCpbj+EAA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnBorrow.Icon" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAHxJREFUSEvt
+        lUEOgCAMBPs8//8EfYgCcS+lZQVT4eAkc2jYsjeQmZy3jKe5ipCCLXkksdRr3s13uOxJa7HHfIcLQqPQ
+        /c8K3upihUd0oQHCegWYmUDPFd4CE+i5ggYI6xVgtrRonRV0ALOlReusQAOE+QXhz3X4h/OjELkAfDvB
+        ey/suxoAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnDelete.Icon" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAGlJREFUSEvt
+        zsENgCAMRuGOwjjsv4AJDlKLvJMJ0OrFQ7+Ei/lfqqTPVLXYO+w99W+FWczo48j32IeR/wQ/5UbmR+dG
+        5ke3DZnlgTlmeWCOWR6YY/bqQBupSyPzs6jaO+98rW8qWYoSuQDYm+pCb8zzZAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnSave.Icon" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAIRJREFUSEvt
+        kLENgDAMBFMwDOukYhzmYUWa8G87UlAqjGmQT3opsuNzlJIkj2itrXaMB/KKnMhupTgGOYldAGHKZyD0
+        yXF5QQ6kWmmCPcT3cgxsOieCaQlr1iO+b+Ggzt+X8Gw18u7PKVCPLrHEyDsUqU/EsfIOheoVYuUdij+T
+        J3+glAu5v/VWErc4IgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
